examples/test/testpolicy12645.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12645
  namespace: namespace144
spec:
  podSelector:
    matchLabels:
      key18: value36
      key9: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value24
          key7: value31
      podSelector:
        matchLabels:
          key45: value40
